@@ -4,9 +4,8 @@ include_once 'includes/init.php';
 if ( ! $is_admin )
   $user = $login;
 
-print_header ( array ( 'js/views.php/true', 'js/visible.php' ) );
-
 ob_start();
+print_header( array( 'js/visible.php' ) );
 
 echo display_admin_link() . '
 <!-- TABS -->
@@ -41,8 +40,6 @@ for ( $i = 0, $cnt = count ( $views ); $i < $cnt; $i++ ) {
   }
 }
 
-ob_end_flush();
-
 echo '
         </ul>' . ( $global_found ? '<br />
         *&nbsp;' . translate ( 'Global' ) : '' ) . '<br />
@@ -51,5 +48,7 @@ echo '
       </div>
     </div>
     ' . print_trailer();
+
+ob_end_flush();
 
 ?>
