@@ -4,6 +4,7 @@ NOTE: This is the 1.3.X development branch.
 Put code changes right below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - 24-Jan-10 bb Patch [ 2938298 ] error message: stat failed for includes/js/views.php
  - 27-Dec-09 bb In includes/init.php, moving some of the CSS links into print_header($INC)
    and some other cleanup.
  - 26-Dec-09 bb Removing PHP from JavaScript and vice versa 
